# app/Http/Resources/SurveyResource.php
@@ -11,17 +11,9 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *     type="object",
  *     title="Survey",
  *     @OA\Property(property="ticket_id", type="integer", example=1),
- *     @OA\Property(
- *         property="user",
- *         type="object",
- *         @OA\Property(property="name", type="string", example="John"),
- *         @OA\Property(property="lastname", type="string", example="Doe")
- *     ),
- *     @OA\Property(
- *         property="questions",
- *         type="array",
- *         @OA\Items(type="string", example="What is your favorite color?")
- *     ),
+ *     @OA\Property(property="user_name", type="string", example="John"),
+ *     @OA\Property(property="user_lastname", type="string", example="Doe"),
+ *     @OA\Property(property="question", type="string", example="What is your favorite color?"),
  *     @OA\Property(property="score", type="integer", example=5),
  * )
  */
@@ -36,13 +28,9 @@ class SurveyResource extends JsonResource
     {
         return [
             'ticket_id' => $this->ticket_id,
-            'user' => [
-                'name' => $this->user->name,
-                'lastname' => $this->user->lastname,
-            ],
-            'questions' => $this->questions->map(function ($question) {
-                return $question->question;
-            }),
+            'user_name' => $this->user->name,
+            'user_lastname' => $this->user->lastname,
+            'question' => $this->questions->question,
             'score' => $this->score,
         ];
     }
